--- a/index.html
+++ b/index.html
@@ -384,24 +384,24 @@
 <p>如有任何意见建议，欢迎在<a href="https://jq.qq.com/?_wv=1027&k=5tPH7m7">QQ群 455270603</a>(入群答案发酵桶)反馈、<a href="http://www.mcbbs.net/thread-696861-1-1.html">在论坛回复</a>或<a href="http://www.mcbbs.net/home.php?mod=spacecp&ac=pm&touid=975525">私信我</a>、<a href="https://github.com/ruhuasiyu/CraftingPlusPlus/issues/new">发起issue</a>、<a href="https://gitee.com/zhangshenxing/CraftingPlusPlus/issues/new">发起issue</a>，请在反馈时提供游戏版本和模组版本。</p>
 
 <h3 id="下载与安装">📦 下载与安装</h3>
-<p>更多版本请前往<a href="https://jq.qq.com/?_wv=1027&k=5tPH7m7">QQ群 455270603</a>下载。其它链接<a href="http://www.mcbbs.net/thread-696861-1-1.html">MCBBS 页</a>、<a href="https://www.mcmod.cn/class/1297.html">MC 百科页</a>未必能及时更新。本页面仅包含1.10及以上版本的内容。</p>
+<p>其它链接<a href="http://www.mcbbs.net/thread-696861-1-1.html">MCBBS 页</a>、<a href="https://www.mcmod.cn/class/1297.html">MC 百科页</a>未必能及时更新。本页面仅包含1.10及以上版本的内容。</p>
 <table><thead><tr><th>支持的minecraft版本</th>
 	<th>Crafting++版本</th>
 	<th>下载地址</th></tr></thead>
 <tbody>
 	<tr>
 		<td>Java版 20w51a</td>
-		<td>v1.12-0111</td>
-		<td><a href="https://gitee.com/zhangshenxing/CraftingPlusPlus/releases/v1.12-0111">Gitee</a> |
-			<a href="https://github.com/ruhuasiyu/CraftingPlusPlus/releases/tag/v1.12-0111">GitHub</a> |
-			<a href="http://home.ustc.edu.cn/~zsxqq/craftingpp/v1.12-0111.zip">其它</a></td>
+		<td>v1.12-0115</td>
+		<td><a href="https://gitee.com/zhangshenxing/CraftingPlusPlus/releases/v1.12-0115">Gitee</a> |
+			<a href="https://github.com/ruhuasiyu/CraftingPlusPlus/releases/tag/v1.12-0115">GitHub</a> |
+			<a href="http://home.ustc.edu.cn/~zsxqq/craftingpp/v1.12-0115.zip">其它</a></td>
 	</tr>
 	<tr>
 		<td>Java版 1.16.2-1.16.4</td>
-		<td>v1.11.2-0111</td>
-		<td><a href="https://gitee.com/zhangshenxing/CraftingPlusPlus/releases/v1.11.2-0111">Gitee</a> |
-			<a href="https://github.com/ruhuasiyu/CraftingPlusPlus/releases/tag/v1.11.2-0111">GitHub</a> |
-			<a href="http://home.ustc.edu.cn/~zsxqq/craftingpp/v1.11.2-0111.zip">其它</a></td>
+		<td>v1.11.2-0115</td>
+		<td><a href="https://gitee.com/zhangshenxing/CraftingPlusPlus/releases/v1.11.2-0115">Gitee</a> |
+			<a href="https://github.com/ruhuasiyu/CraftingPlusPlus/releases/tag/v1.11.2-0115">GitHub</a> |
+			<a href="http://home.ustc.edu.cn/~zsxqq/craftingpp/v1.11.2-0115.zip">其它</a></td>
 	</tr>
 	<tr><td colspan="3"></td></tr>
 	<tr>
@@ -421,7 +421,8 @@
 	</tr>
 </tbody></table>
 
-<p>模组支持英文、简体中文、繁体中文、<a href="https://www.mcbbs.net/thread-1004643-1-1.html"><del>梗体中文</del></a>。安装教程：<a href="https://www.bilibili.com/video/BV1sA411t7ML">https://www.bilibili.com/video/BV1sA411t7ML</a></p>
+<p>模组支持英文、简体中文、繁体中文、<a href="https://www.mcbbs.net/thread-1004643-1-1.html"><del>梗体中文</del></a>。</p>
+<!-- 安装教程：<a href="https://www.bilibili.com/video/BV1sA411t7ML">https://www.bilibili.com/video/BV1sA411t7ML</a> -->
 <ul>
 	<li>安装数据包：<ul>
 		<li>如果是新的世界，在生成世界时可以在世界预设中点击<code>数据包</code>，将下载好的文件拖拽进打开的界面，并选择至右侧以启用。</li>
@@ -472,7 +473,7 @@
 <p><span style="font-weight:bold;">平台支持</span>：<a href="https://www.mcbbs.net/">Minecraft(我的世界)中文论坛</a> <a href="https://www.mcmod.cn/">MC百科</a> </p>
 <p><span style="font-weight:bold;">赞助名单</span>：<span style="color:blue;">月下贱影 一米八微笑 明月庄主 SPGoding Rhythm萱 唯一丶为伊 8Index LIXIAOGANG 陌余Oucher uuu2011 爱发电用户_AU9c 甘小蔗 空白 火星浮云 这是彩虹糖呢 古镇天 支持国产mod 倪采臣 zzzz 大吃货 折君 Hao_Tian22 Appleeeee 爱发电用户_JCmn 落天望月 爱发电用户_4eyN switefaster 猫君 chyx TUCAOEVER</span></p>
 <!--一米八微笑 250 明月庄主 250 Rhythm萱8Index 128 月下贱影 300 LIXIAOGANG 96 SPGoding 136 墨鱼 86 uuu2011 66 火星浮云 64 匿名1 64 匿名2 50 这是彩虹糖呢 48 倪采臣大吃货 32 ustc_zzzz 32 折君 31  苹果果 落天望月 chyx switefaster 猫君-->
-<p>设计过程中亦参考了<a href="http://teamcofh.com/">热力膨胀</a>、<a href="https://botaniamod.net/">植物魔法</a>、<a href="http://www.abyssalcraft.com/">深渊国度</a>、<a href="https://minecraft.curseforge.com/projects/pams-harvestcraft">潘马斯农场</a>、<a href="https://www.mcmod.cn/class/250.html">无中生有</a>，<a href="https://www.mcmod.cn/class/353.html">等价交换</a>、<a href="https://minecraft.curseforge.com/projects/saltymod">盐</a>等模组以及<a href="https://www.bilibili.com/">Bilibili</a>与<a href="youtube.com">Youtube</a>一些视频，<a href="http://www.mcbbs.net/group-546-1.html">CBL</a>、<a href="http://www.mcbbs.net/group-1009-1.html">TCP</a>、<a href="http://www.mcbbs.net/group-1474-1.html">CBV</a>、<a href="http://www.mcbbs.net/group-1478-1.html">MAG</a>等小组以及天狼星black、MC先生、pineapple_、贰逼、ECS、pca、玄素、乙烯_中国、⊙v⊙、HerobrineXia、白天、苹果果、SorrowRain、Amber、匠魂、Gingerbread、森林蝙蝠、mcer、Stark、yap、Lakejason、Ph-苯等玩家亦对此模组有贡献。</p>
+<p>设计过程中亦参考了<a href="http://teamcofh.com/">热力膨胀</a>、<a href="https://botaniamod.net/">植物魔法</a>、<a href="http://www.abyssalcraft.com/">深渊国度</a>、<a href="https://minecraft.curseforge.com/projects/pams-harvestcraft">潘马斯农场</a>、<a href="https://www.mcmod.cn/class/250.html">无中生有</a>，<a href="https://www.mcmod.cn/class/353.html">等价交换</a>、<a href="https://minecraft.curseforge.com/projects/saltymod">盐</a>等模组以及<a href="https://www.bilibili.com/">Bilibili</a>与<a href="youtube.com">Youtube</a>一些视频，<a href="http://www.mcbbs.net/group-546-1.html">CBL</a>、<a href="http://www.mcbbs.net/group-1009-1.html">TCP</a>、<a href="http://www.mcbbs.net/group-1474-1.html">CBV</a>、<a href="http://www.mcbbs.net/group-1478-1.html">MAG</a>等小组以及天狼星black、MC先生、pineapple_、贰逼、ECS、pca、玄素、乙烯_中国、⊙v⊙、HerobrineXia、白天、苹果果、SorrowRain、Amber、匠魂、Gingerbread、森林蝙蝠、mcer、Stark、yap、Lakejason、Ph-苯、Cjsah等玩家亦对此模组有贡献。</p>
 <p>感谢以上所有玩家，特别感谢对我们给予赞助的玩家！</p>
 
 <!--==================================================================-->
@@ -582,10 +583,10 @@
 <p><span class="version">1.11.2起</span>武器和盔甲有20%几率会有额外属性，效果等同仪式的<a href="#属性附加">属性附加</a>。</p>
 <p>僵尸能破坏遇到的火把、灯笼、末地烛和海泡菜，让你的光照防御变得脆弱无比。</p>
 <p>苦力怕爆炸前的引线时间变得更短，有几率变异为高压苦力怕，想要近身搏斗几无可能。</p>
-<p class="note">使用命令<code>scoreboard players set $doZombieImproving cppConfig 0或1</code>来关闭/开启增强僵尸、僵尸村民和尸壳功能。</p>
-<p class="note">使用命令<code>scoreboard players set $doSkeletonImproving cppConfig 0或1</code>来关闭/开启增强骷髅和流浪者功能。</p>
-<p class="note">使用命令<code>scoreboard players set $doWitherSkeletonImproving cppConfig 0或1</code>来关闭/开启增强凋灵骷髅功能。</p>
-<p class="note">使用命令<code>scoreboard players set $doCreeperImproving cppConfig 0或1</code>来关闭/开启增强爬行者功能。</p>
+<p class="note">使用命令<code>/scoreboard players set $doZombieImproving cppConfig 0或1</code>来关闭/开启增强僵尸、僵尸村民和尸壳功能。</p>
+<p class="note">使用命令<code>/scoreboard players set $doSkeletonImproving cppConfig 0或1</code>来关闭/开启增强骷髅和流浪者功能。</p>
+<p class="note">使用命令<code>/scoreboard players set $doWitherSkeletonImproving cppConfig 0或1</code>来关闭/开启增强凋灵骷髅功能。</p>
+<p class="note">使用命令<code>/scoreboard players set $doCreeperImproving cppConfig 0或1</code>来关闭/开启增强爬行者功能。</p>
 <figure>
 	<img style="height:250px" src="items/screenshots/enhanced_mobs.png" alt="加强后的僵尸、骷髅和高压苦力怕" />
 	<figcaption>图 加强后的僵尸、骷髅和高压苦力怕</figcaption>
@@ -595,7 +596,7 @@
 <h3 id="黑暗碎片">黑暗碎片 <code>cpp:shard_of_the_darkness</code></h3>
 		<a class="ui ci shard_of_the_darkness"></a>
 <p>部分动物因接触黑暗力量的大脑发生了异变，其头部会持续发出黑色颗粒效果，并会靠近和攻击玩家。黑暗动物被玩家杀死后掉落黑暗碎片。</p>
-<p class="note">使用命令<code>scoreboard players set $doDarkAnimalSpawning cppConfig 0或1</code>来关闭/开启生成黑暗生物功能，注意关闭会导致无法使用<a href="#远古仪式">远古仪式</a>来修复<a href="#破损刷怪笼">破损刷怪笼</a>。</p>
+<p class="note">使用命令<code>/scoreboard players set $doDarkAnimalSpawning cppConfig 0或1</code>来关闭/开启生成黑暗生物功能，注意关闭会导致无法使用<a href="#远古仪式">远古仪式</a>来修复<a href="#破损刷怪笼">破损刷怪笼</a>。</p>
 
 <table><thead><tr><th>生物类别</th>
 	<th>攻击方式</th>
@@ -2285,7 +2286,7 @@
 	<td>1</td></tr>
 </tbody></table>
 
-<p class="note">使用命令<code>scoreboard players set $allInOneMachinePeriod cppConfig 1200</code>来修改机器速度，数值越小速度越快，默认为1200。</p>
+<p class="note">使用命令<code>/scoreboard players set $allInOneMachinePeriod cppConfig 1200</code>来修改机器速度，数值越小速度越快，默认为1200。</p>
 <p class="note">多功能一体机的函数接口<code>function #cpp:all_in_one_machine</code>调用于<code>cpp/functions/all_in_one_machine/type.mcfunction</code>。配方按模式、经验、时长分类，位于<code>cpp/predicates/all_in_one_machine</code>和<code>cpp/loot_tables/all_in_one_machine</code>。</p>
 
 <h3 id="交易机">交易机 <code>cpp:trade_machine</code></h3>
@@ -4080,7 +4081,7 @@
 </tr>
 </tbody></table>
 
-<p class="note">使用命令<code>scoreboard players set $MobProjectorPeriod cppConfig 2400</code>来修改生成速度，数值越小速度越快，默认为2400。</p>
+<p class="note">使用命令<code>/scoreboard players set $MobProjectorPeriod cppConfig 2400</code>来修改生成速度，数值越小速度越快，默认为2400。</p>
 <p class="note">生物投影仪配方按物品生成对应分数，然后按分数来召唤生物，配方位于<code>cpp/loot_tables/mob_projector/type.json</code>，召唤的函数位于<code>cpp/functions/mob_projector/spawn.mcfunction</code>。</p>
 
 <h3 id="信标增强器">信标增强器 <code>cpp:beacon_enhancer</code></h3>
@@ -4554,7 +4555,7 @@
 </tbody></table>
 <p>在<a href="#附魔室">附魔室</a>箱子中有几率出现，一共8种。在<a href="#金砧">金砧</a>中可用于给拥有相同等级相应附魔的物品的附魔等级+1。</p>
 <p>可以通过打开<a href="#圣诞礼物">圣诞礼物</a>得到。</p>
-<p><span class="version">1.11.2起</span> 经验修补 II 的手持物或盔甲的耐久不满时，会抽取自身最多63点经验来生成相应经验球来实现修复效果。当缺少的耐久值为1时，此时不消耗经验就可以修复，相当于无损修复。</p>
+<p><span class="version">1.11.2起</span> 经验修补II 的手持物或盔甲的耐久不满时，会抽取自身经验来修复。当缺少的耐久值为1时，此时不消耗经验就可以修复，相当于无损修复。</p>
 
 <h3 id="附魔之瓶">附魔之瓶</h3>
 <p>附魔之瓶存储的经验值固定为9点。当玩家副手持有漏斗时，经验会以每刻9点的速度转化为附魔之瓶。如果此时玩家主手还持有<a href="#压缩器">压缩器</a>，经验会以每刻576点的速度转化为<a href="#压缩器">附魔之瓶(64×)</a>。</p>
@@ -8746,7 +8747,7 @@
 <p>水果树下会随机掉落除香橼外的所有<a href="#水果">水果</a>。破坏樱花树树叶掉落樱花树树苗、<a href="#樱桃">樱桃</a>。</p>
 <p>矿石树树叶一定时间后会转化为矿石。</p>
 <p>破坏羊毛树树叶掉落羊毛树树苗、羊毛、鱼或羊。</p>
-<p class="note">使用命令<code>scoreboard players set $modTreeAgeMax cppConfig 2</code>来修改树的生长阶段数，默认为2。使用命令<code>scoreboard players set $modLeavesThreshold cppConfig 3600</code>来修改树叶的转化速度，数值越小速度越快，默认为3600。</p>
+<p class="note">使用命令<code>/scoreboard players set $modTreeAgeMax cppConfig 2</code>来修改树的生长阶段数，默认为2。使用命令<code>/scoreboard players set $modLeavesThreshold cppConfig 3600</code>来修改树叶的转化速度，数值越小速度越快，默认为3600。</p>
 
 
 <!--==================================================================-->
@@ -8840,7 +8841,7 @@
 <p>将烈焰棒重命名为任意名称，然后扔入岩浆即可得到黑暗魔杖，名称越中二法力越强。</p>
 
 <h3 id="魔法仪式">魔法仪式</h3>
-<p class="note">使用命令<code>scoreboard players set $ritualsTime cppConfig 1200</code>来修改仪式耗时，数值越小速度越快，默认为1200。仪式的配方位于<code>cpp:predicates/rituals</code>和<code>cpp:loot_tables/rituals</code>，其中在<code>cpp:loot_tables/rituals/attr.json</code>中修改可附加属性的物品和属性范围。</p>
+<p class="note">使用命令<code>/scoreboard players set $ritualsTime cppConfig 1200</code>来修改仪式耗时，数值越小速度越快，默认为1200。仪式的配方位于<code>cpp:predicates/rituals</code>和<code>cpp:loot_tables/rituals</code>，其中在<code>cpp:loot_tables/rituals/attr.json</code>中修改可附加属性的物品和属性范围。</p>
 <p>在地面摆出如下形状，然后在青金石上方放置发射器，并在发射器上方放置物品展示框。将材料放入发射器，将待处理的物品放入物品展示框，使用魔杖shift右击并等待即可。</p>
 <p><span class="ui dp">
 	<a class="emerald_block" title="绿宝石块"></a>
@@ -8962,7 +8963,7 @@
 <p>每件物品只可附加一种效果。效果可重复附加，之前的效果将会被覆盖。</p>
 <p>盔甲效果在对应栏位生效，剑和工具在主手生效，每秒消耗1点经验值，重复的效果不会叠加但消耗的经验值会叠加。使用<a href="#节制器">节制器</a>可开启/关闭所有效果。连锁效果无消耗。</p>
 
-<p>连锁效果下，使用斧可以破坏相连的木头/瓜/成熟作物；镐可以破坏相连的矿物/黑曜石；锹可以破坏相连的沙子/红沙/砂砾/黏土块；锄可以破坏相连的干草块/下界疣块/诡异疣块/菌光体。受附魔影响。工具不会完全损坏，至少会保留1点耐久。支持植物魔法和通用机械的工具。</p>
+<p>连锁效果下，使用斧可以破坏相连的木头/瓜/成熟作物；镐可以破坏相连的矿物/黑曜石；锹可以破坏相连的沙子/红沙/砂砾/黏土块；锄可以破坏相连的干草块/下界疣块/诡异疣块/菌光体。受附魔影响。工具不会完全损坏，至少会保留1点耐久。支持植物魔法和通用机械的工具。默认情形下一次性最多可破坏1024个方块，使用命令<code>/scoreboard players set $maxChainBlocks cppConfig 1024</code>来修改。</p>
 
 <p>磁力效果类似磁铁，不受节制器控制。</p>
 
@@ -10119,7 +10120,7 @@
 <p><span class="oldversion">1.10</span> 使用命令<code>/trigger cppTrim</code>来整理自己背包(不含快捷栏)。</p>
 
 <h3 id="自动插火把">自动插火把</h3>
-<p><span class="version">1.11.2起</span>使用指令<code>/trigger cppTorchPeriod set 间隔</code>，会在离玩家最近的四个XZ坐标为 cppTorchPeriod 的整数倍的位置放置火把。设置为0取消自动插火把功能。</p>
+<p><span class="version">1.11.2起</span>使用指令<code>/trigger cppTorchPeriod set 间隔</code>，会在离玩家最近的四个XZ坐标为 cppTorchPeriod 的整数倍的位置放置火把。设置为0取消自动插火把功能。如果为负数则是插灵魂火把。</p>
 <p><span class="oldversion">1.9-1.11.1</span>使用指令<code>/trigger cppTorchPeriod set 刻数</code>，可以设定每隔一段时间自动插一根火把。设置为0取消自动插火把功能。</p>
 
 <h3 id="竖纹方块">竖纹方块</h3>
@@ -10247,7 +10248,7 @@
 <p>方块破坏器下方的伸出的活塞臂收回时，会自动破坏方块破坏器上方的方块，以此实现<strong>自动刷矿</strong>。</p>
 <p>将12个绿宝石块摆成末地传送门框架的形状，然后在正中间放置或点火(1.10-1.11)即可得到<strong>末地传送门框架</strong>。</p>
 <p>玩家杀死生物时背包的沙子(1.10.x)/砂土(1.11)会变成灵魂沙(1.10.x)/灵魂土(1.11)。</p>
-<p>使用<code>/trigger cppHome</code>可以返回自己的岛屿。如果需要前往他人岛屿，让管理员协助你传送过去，然后你使用<code>/trigger cppSetHome</code>来重新设置自己岛屿位置。使用命令<code>scoreboard players set $skyislandDistance cppConfig 1000</code>来修改不同空岛的距离。</p>
+<p>使用<code>/trigger cppHome</code>可以返回自己的岛屿。如果需要前往他人岛屿，让管理员协助你传送过去，然后你使用<code>/trigger cppSetHome</code>来重新设置自己岛屿位置。使用命令<code>/scoreboard players set $skyislandDistance cppConfig 1000</code>来修改不同空岛的距离。</p>
 
 <!--==================================================================-->
 <h2 id="进度">进度</h2>
@@ -10517,7 +10518,7 @@
 	<a href="https://space.bilibili.com/4469715"><img src="items/bilibili.png" alt="哔哩哔哩" /></a>
 </p>
 
-<p>最后更新 2021-01-11</p>
+<p>最后更新 2021-01-15</p>
 </footer>
 
 </article>
