--- a/index.html
+++ b/index.html
@@ -381,7 +381,7 @@
 <li>食物装饰——41种植物、82种食物、79种头颅、21种头饰服饰、40种新春装饰、50种经典画作、103种纸片人、16种告示牌、100种称号，装点自己也装点自己的家。</li>
 </ul>
 <p style="display: none;">本模组即将完结，以后应该只会修复bug和优化内容，不会再有大的更新。如遇到Minecraft命令机制大改或新生物等内容，我还是会及时更新代码并支持新的内容。感谢大家一直以来的支持和帮助！</p>
-<p>如有任何意见建议，欢迎在<a href="https://jq.qq.com/?_wv=1027&k=5tPH7m7">QQ群 455270603</a>(入群答案发酵桶)反馈、<a href="http://www.mcbbs.net/thread-696861-1-1.html">在论坛回复</a>或<a href="http://www.mcbbs.net/home.php?mod=spacecp&ac=pm&touid=975525">私信我</a>、<a href="https://github.com/ruhuasiyu/CraftingPlusPlus/issues/new">发起issue</a>、<a href="https://gitee.com/zhangshenxing/CraftingPlusPlus/issues/new">发起issue</a>，请在反馈时提供游戏版本和模组版本。</p>
+<p>如有任何意见建议，欢迎在<a href="https://jq.qq.com/?_wv=1027&k=5tPH7m7">QQ群 642167529</a>(入群答案纸片人)反馈、<a href="http://www.mcbbs.net/thread-696861-1-1.html">在论坛回复</a>或<a href="http://www.mcbbs.net/home.php?mod=spacecp&ac=pm&touid=975525">私信我</a>、<a href="https://github.com/ruhuasiyu/CraftingPlusPlus/issues/new">发起issue</a>、<a href="https://gitee.com/zhangshenxing/CraftingPlusPlus/issues/new">发起issue</a>，请在反馈时提供游戏版本和模组版本。</p>
 
 <h3 id="下载与安装">📦 下载与安装</h3>
 <p>其它链接<a href="http://www.mcbbs.net/thread-696861-1-1.html">MCBBS 页</a>、<a href="https://www.mcmod.cn/class/1297.html">MC 百科页</a>未必能及时更新。本页面仅包含1.10及以上版本的内容。</p>
@@ -2399,38 +2399,103 @@
 <table class="center aiom_table"><thead><tr>
 	<th colspan="2">输入</th><th colspan="2">输出</th><th>消耗经验</th><th>冷却时间(秒)</th>
 </tr></thead><tbody>
+
+
 <tr><td><a href="#交易插件" class="ui ci trade_plugin1"></a><a class="ui emerald" title="绿宝石"></a></td>
 	<td><a href="#交易插件">交易插件</a>(不消耗)+绿宝石</td>
-	<td><a class="ui white_wool " title="白色羊毛"></a></td>
-	<td>白色羊毛</td>
+	<td><a class="ui arrow" title="箭"><span class="stack">16</span></a></td>
+	<td>16 箭</td>
 	<td>1</td>
 	<td>2</td>
 </tr>
 <tr><td><a href="#交易插件" class="ui ci trade_plugin1"></a><a class="ui emerald" title="绿宝石"></a></td>
 	<td><a href="#交易插件">交易插件</a>(不消耗)+绿宝石</td>
-	<td><a class="ui packed_ice" title="浮冰"></a></td>
-	<td>浮冰</td>
+	<td><a class="ui cookie" title="曲奇"><span class="stack">12</span></a></td>
+	<td>12 曲奇</td>
 	<td>1</td>
 	<td>2</td>
 </tr>
 <tr><td><a href="#交易插件" class="ui ci trade_plugin1"></a><a class="ui emerald" title="绿宝石"></a></td>
 	<td><a href="#交易插件">交易插件</a>(不消耗)+绿宝石</td>
-	<td><a class="ui blue_ice" title="蓝冰"></a></td>
-	<td>蓝冰</td>
+	<td><a class="ui brick" title="红砖"><span class="stack">10</span></a></td>
+	<td>10 红砖</td>
 	<td>1</td>
 	<td>2</td>
 </tr>
 <tr><td><a href="#交易插件" class="ui ci trade_plugin1"></a><a class="ui emerald" title="绿宝石"></a></td>
 	<td><a href="#交易插件">交易插件</a>(不消耗)+绿宝石</td>
-	<td><a class="ui tube_coral_block" title="随机珊瑚块"></a></td>
-	<td>随机珊瑚块</td>
+	<td><a class="ui sand" title="沙子"><span class="stack">8</span></a></td>
+	<td>8 沙子</td>
 	<td>1</td>
 	<td>2</td>
 </tr>
 <tr><td><a href="#交易插件" class="ui ci trade_plugin1"></a><a class="ui emerald" title="绿宝石"></a></td>
 	<td><a href="#交易插件">交易插件</a>(不消耗)+绿宝石</td>
-	<td><a class="ui lantern" title="灯笼"></a></td>
-	<td>灯笼</td>
+	<td><a class="ui cooked_chicken" title="熟鸡肉"><span class="stack">8</span></a></td>
+	<td>8 熟鸡肉</td>
+	<td>1</td>
+	<td>2</td>
+</tr>
+<tr><td><a href="#交易插件" class="ui ci trade_plugin1"></a><a class="ui emerald" title="绿宝石"></a></td>
+	<td><a href="#交易插件">交易插件</a>(不消耗)+绿宝石</td>
+	<td><a class="ui bread" title="面包"><span class="stack">6</span></a></td>
+	<td>6 面包</td>
+	<td>1</td>
+	<td>2</td>
+</tr>
+<tr><td><a href="#交易插件" class="ui ci trade_plugin1"></a><a class="ui emerald" title="绿宝石"></a></td>
+	<td><a href="#交易插件">交易插件</a>(不消耗)+绿宝石</td>
+	<td><a class="ui cooked_porkchop" title="熟猪排"><span class="stack">5</span></a></td>
+	<td>5 熟猪排</td>
+	<td>1</td>
+	<td>2</td>
+</tr>
+<tr><td><a href="#交易插件" class="ui ci trade_plugin1"></a><a class="ui emerald" title="绿宝石"></a></td>
+	<td><a href="#交易插件">交易插件</a>(不消耗)+绿宝石</td>
+	<td><a class="ui red_dye" title="随机染料"><span class="stack">4</span></a></td>
+	<td>4 随机染料</td>
+	<td>1</td>
+	<td>2</td>
+</tr>
+<tr><td><a href="#交易插件" class="ui ci trade_plugin1"></a><a class="ui emerald" title="绿宝石"></a></td>
+	<td><a href="#交易插件">交易插件</a>(不消耗)+绿宝石</td>
+	<td><a class="ui glass" title="玻璃"><span class="stack">4</span></a></td>
+	<td>4 玻璃</td>
+	<td>1</td>
+	<td>2</td>
+</tr>
+<tr><td><a href="#交易插件" class="ui ci trade_plugin1"></a><a class="ui emerald" title="绿宝石"></a></td>
+	<td><a href="#交易插件">交易插件</a>(不消耗)+绿宝石</td>
+	<td><a class="ui apple" title="苹果"><span class="stack">4</span></a></td>
+	<td>4 苹果</td>
+	<td>1</td>
+	<td>2</td>
+</tr>
+<tr><td><a href="#交易插件" class="ui ci trade_plugin1"></a><a class="ui emerald" title="绿宝石"></a></td>
+	<td><a href="#交易插件">交易插件</a>(不消耗)+绿宝石</td>
+	<td><a class="ui pumpkin_pie" title="南瓜派"><span class="stack">4</span></a></td>
+	<td>4 南瓜派</td>
+	<td>1</td>
+	<td>2</td>
+</tr>
+<tr><td><a href="#交易插件" class="ui ci trade_plugin1"></a><a class="ui emerald" title="绿宝石"></a></td>
+	<td><a href="#交易插件">交易插件</a>(不消耗)+绿宝石</td>
+	<td><a class="ui red_sand" title="红沙"><span class="stack">4</span></a></td>
+	<td>4 红沙</td>
+	<td>1</td>
+	<td>2</td>
+</tr>
+<tr><td><a href="#交易插件" class="ui ci trade_plugin1"></a><a class="ui emerald" title="绿宝石"></a></td>
+	<td><a href="#交易插件">交易插件</a>(不消耗)+绿宝石</td>
+	<td><a class="ui redstone" title="红石粉"><span class="stack">2</span></a></td>
+	<td>2 红石粉</td>
+	<td>1</td>
+	<td>2</td>
+</tr>
+<tr><td><a href="#交易插件" class="ui ci trade_plugin1"></a><a class="ui emerald" title="绿宝石"></a></td>
+	<td><a href="#交易插件">交易插件</a>(不消耗)+绿宝石</td>
+	<td><a class="ui tipped_arrow_leaping" title="随机药箭"><span class="stack">2</span></a></td>
+	<td>2 随机药箭</td>
 	<td>1</td>
 	<td>2</td>
 </tr>
@@ -2438,13 +2503,6 @@
 	<td><a href="#交易插件">交易插件</a>(不消耗)+绿宝石</td>
 	<td><a class="ui cake" title="蛋糕"></a></td>
 	<td>蛋糕</td>
-	<td>1</td>
-	<td>2</td>
-</tr>
-<tr><td><a href="#交易插件" class="ui ci trade_plugin1"></a><a class="ui emerald" title="绿宝石"></a></td>
-	<td><a href="#交易插件">交易插件</a>(不消耗)+绿宝石</td>
-	<td><a class="ui ci rabbit_stew" title="兔肉煲"></a></td>
-	<td><a href="#兔肉煲" title="兔肉煲">兔肉煲</a></td>
 	<td>1</td>
 	<td>2</td>
 </tr>
@@ -2462,8 +2520,15 @@
 </tr>
 <tr><td><a href="#交易插件" class="ui ci trade_plugin1"></a><a class="ui emerald" title="绿宝石"></a></td>
 	<td><a href="#交易插件">交易插件</a>(不消耗)+绿宝石</td>
-	<td><a class="ui terracotta" title="陶瓦"></a></td>
-	<td>陶瓦</td>
+	<td><a class="ui packed_ice" title="浮冰"></a></td>
+	<td>浮冰</td>
+	<td>1</td>
+	<td>2</td>
+</tr>
+<tr><td><a href="#交易插件" class="ui ci trade_plugin1"></a><a class="ui emerald" title="绿宝石"></a></td>
+	<td><a href="#交易插件">交易插件</a>(不消耗)+绿宝石</td>
+	<td><a class="ui blue_ice" title="蓝冰"></a></td>
+	<td>蓝冰</td>
 	<td>1</td>
 	<td>2</td>
 </tr>
@@ -2497,6 +2562,41 @@
 </tr>
 <tr><td><a href="#交易插件" class="ui ci trade_plugin1"></a><a class="ui emerald" title="绿宝石"></a></td>
 	<td><a href="#交易插件">交易插件</a>(不消耗)+绿宝石</td>
+	<td><a class="ui lantern" title="灯笼"></a></td>
+	<td>灯笼</td>
+	<td>1</td>
+	<td>2</td>
+</tr>
+<tr><td><a href="#交易插件" class="ui ci trade_plugin1"></a><a class="ui emerald" title="绿宝石"></a></td>
+	<td><a href="#交易插件">交易插件</a>(不消耗)+绿宝石</td>
+	<td><a class="ui terracotta" title="陶瓦"></a></td>
+	<td>陶瓦</td>
+	<td>1</td>
+	<td>2</td>
+</tr>
+<tr><td><a href="#交易插件" class="ui ci trade_plugin1"></a><a class="ui emerald" title="绿宝石"></a></td>
+	<td><a href="#交易插件">交易插件</a>(不消耗)+绿宝石</td>
+	<td><a class="ui white_wool " title="白色羊毛"></a></td>
+	<td>白色羊毛</td>
+	<td>1</td>
+	<td>2</td>
+</tr>
+<tr><td><a href="#交易插件" class="ui ci trade_plugin1"></a><a class="ui emerald" title="绿宝石"></a></td>
+	<td><a href="#交易插件">交易插件</a>(不消耗)+绿宝石</td>
+	<td><a class="ui tube_coral_block" title="随机珊瑚块"></a></td>
+	<td>随机珊瑚块</td>
+	<td>1</td>
+	<td>2</td>
+</tr>
+<tr><td><a href="#交易插件" class="ui ci trade_plugin1"></a><a class="ui emerald" title="绿宝石"></a></td>
+	<td><a href="#交易插件">交易插件</a>(不消耗)+绿宝石</td>
+	<td><a class="ui ci rabbit_stew" title="兔肉煲"></a></td>
+	<td><a href="#兔肉煲" title="兔肉煲">兔肉煲</a></td>
+	<td>1</td>
+	<td>2</td>
+</tr>
+<tr><td><a href="#交易插件" class="ui ci trade_plugin1"></a><a class="ui emerald" title="绿宝石"></a></td>
+	<td><a href="#交易插件">交易插件</a>(不消耗)+绿宝石</td>
 	<td><a class="ui cod_bucket" title="鳕鱼桶"></a></td>
 	<td>鳕鱼桶</td>
 	<td>1</td>
@@ -2524,106 +2624,6 @@
 	<td>2</td>
 </tr>
 
-<tr><td><a href="#交易插件" class="ui ci trade_plugin1"></a><a class="ui emerald" title="绿宝石"></a></td>
-	<td><a href="#交易插件">交易插件</a>(不消耗)+绿宝石</td>
-	<td><a class="ui redstone" title="红石粉"><span class="stack">2</span></a></td>
-	<td>2 红石粉</td>
-	<td>1</td>
-	<td>2</td>
-</tr>
-<tr><td><a href="#交易插件" class="ui ci trade_plugin1"></a><a class="ui emerald" title="绿宝石"></a></td>
-	<td><a href="#交易插件">交易插件</a>(不消耗)+绿宝石</td>
-	<td><a class="ui tipped_arrow_leaping" title="随机药箭"><span class="stack">2</span></a></td>
-	<td>2 随机药箭</td>
-	<td>1</td>
-	<td>2</td>
-</tr>
-
-<tr><td><a href="#交易插件" class="ui ci trade_plugin1"></a><a class="ui emerald" title="绿宝石"></a></td>
-	<td><a href="#交易插件">交易插件</a>(不消耗)+绿宝石</td>
-	<td><a class="ui apple" title="苹果"><span class="stack">4</span></a></td>
-	<td>4 苹果</td>
-	<td>1</td>
-	<td>2</td>
-</tr>
-<tr><td><a href="#交易插件" class="ui ci trade_plugin1"></a><a class="ui emerald" title="绿宝石"></a></td>
-	<td><a href="#交易插件">交易插件</a>(不消耗)+绿宝石</td>
-	<td><a class="ui pumpkin_pie" title="南瓜派"><span class="stack">4</span></a></td>
-	<td>4 南瓜派</td>
-	<td>1</td>
-	<td>2</td>
-</tr>
-<tr><td><a href="#交易插件" class="ui ci trade_plugin1"></a><a class="ui emerald" title="绿宝石"></a></td>
-	<td><a href="#交易插件">交易插件</a>(不消耗)+绿宝石</td>
-	<td><a class="ui glass" title="玻璃"><span class="stack">4</span></a></td>
-	<td>4 玻璃</td>
-	<td>1</td>
-	<td>2</td>
-</tr>
-<tr><td><a href="#交易插件" class="ui ci trade_plugin1"></a><a class="ui emerald" title="绿宝石"></a></td>
-	<td><a href="#交易插件">交易插件</a>(不消耗)+绿宝石</td>
-	<td><a class="ui red_sand" title="红沙"><span class="stack">4</span></a></td>
-	<td>4 红沙</td>
-	<td>1</td>
-	<td>2</td>
-</tr>
-<tr><td><a href="#交易插件" class="ui ci trade_plugin1"></a><a class="ui emerald" title="绿宝石"></a></td>
-	<td><a href="#交易插件">交易插件</a>(不消耗)+绿宝石</td>
-	<td><a class="ui red_dye" title="随机染料"><span class="stack">4</span></a></td>
-	<td>4 随机染料</td>
-	<td>1</td>
-	<td>2</td>
-</tr>
-
-<tr><td><a href="#交易插件" class="ui ci trade_plugin1"></a><a class="ui emerald" title="绿宝石"></a></td>
-	<td><a href="#交易插件">交易插件</a>(不消耗)+绿宝石</td>
-	<td><a class="ui cooked_porkchop" title="熟猪排"><span class="stack">5</span></a></td>
-	<td>5 熟猪排</td>
-	<td>1</td>
-	<td>2</td>
-</tr>
-<tr><td><a href="#交易插件" class="ui ci trade_plugin1"></a><a class="ui emerald" title="绿宝石"></a></td>
-	<td><a href="#交易插件">交易插件</a>(不消耗)+绿宝石</td>
-	<td><a class="ui bread" title="面包"><span class="stack">6</span></a></td>
-	<td>6 面包</td>
-	<td>1</td>
-	<td>2</td>
-</tr>
-<tr><td><a href="#交易插件" class="ui ci trade_plugin1"></a><a class="ui emerald" title="绿宝石"></a></td>
-	<td><a href="#交易插件">交易插件</a>(不消耗)+绿宝石</td>
-	<td><a class="ui cookie" title="曲奇"><span class="stack">12</span></a></td>
-	<td>12 曲奇</td>
-	<td>1</td>
-	<td>2</td>
-</tr>
-<tr><td><a href="#交易插件" class="ui ci trade_plugin1"></a><a class="ui emerald" title="绿宝石"></a></td>
-	<td><a href="#交易插件">交易插件</a>(不消耗)+绿宝石</td>
-	<td><a class="ui cooked_chicken" title="熟鸡肉"><span class="stack">8</span></a></td>
-	<td>8 熟鸡肉</td>
-	<td>1</td>
-	<td>2</td>
-</tr>
-<tr><td><a href="#交易插件" class="ui ci trade_plugin1"></a><a class="ui emerald" title="绿宝石"></a></td>
-	<td><a href="#交易插件">交易插件</a>(不消耗)+绿宝石</td>
-	<td><a class="ui sand" title="沙子"><span class="stack">8</span></a></td>
-	<td>8 沙子</td>
-	<td>1</td>
-	<td>2</td>
-</tr>
-<tr><td><a href="#交易插件" class="ui ci trade_plugin1"></a><a class="ui emerald" title="绿宝石"></a></td>
-	<td><a href="#交易插件">交易插件</a>(不消耗)+绿宝石</td>
-	<td><a class="ui brick" title="红砖"><span class="stack">10</span></a></td>
-	<td>10 红砖</td>
-	<td>1</td>
-	<td>2</td>
-</tr>
-<tr><td><a href="#交易插件" class="ui ci trade_plugin1"></a><a class="ui emerald" title="绿宝石"></a></td>
-	<td><a href="#交易插件">交易插件</a>(不消耗)+绿宝石</td>
-	<td><a class="ui arrow" title="箭"><span class="stack">16</span></a></td>
-	<td>16 箭</td>
-	<td>1</td>
-	<td>2</td>
-</tr>
 
 <tr><td><a href="#交易插件" class="ui ci trade_plugin1"></a><a class="ui emerald" title="绿宝石"><span class="stack">2</span></a></td>
 	<td><a href="#交易插件">交易插件</a>(不消耗)+2 绿宝石</td>
@@ -3046,7 +3046,7 @@
 		<a class="ui bone" title="骨头"></a>
 		<a class="ui ender_pearl" title="末影珍珠"></a>
 		<a class="ui blaze_rod" title="烈焰棒"></a>
-		<a class="ui quartz" title="石英"></a>
+		<a class="ui quartz" title="下界石英"></a>
 		<a class="ui prismarine_crystals" title="海晶砂粒"></a>
 		<a class="ui beetroot" title="甜菜根"></a>
 		<a class="ui chorus_fruit" title="紫颂果"></a>
@@ -3366,7 +3366,7 @@
 	<td><a class="ui snowball" title="雪球"><span class="stack">4</span></a></td>
 	<td><a class="ui glowstone_dust" title="荧石粉"><span class="stack">4</span></a></td>
 	<td><a class="ui clay_ball" title="黏土球"><span class="stack">4</span></a></td>
-	<td><a class="ui quartz" title="石英"><span class="stack">4</span></a></td>
+	<td><a class="ui quartz" title="下界石英"><span class="stack">4</span></a></td>
 	<td><a class="ui copper_ingot" title="铜锭"><span class="stack">4</span></a></td>
 	<!-- <th rowspan="2"><a class="ui stone_pickaxe" title="镐"></a></th> -->
 	<th rowspan="2"><img src="https://i.mcmod.cn/item/icon/32x32/5/51132.png" title="镐"></th>
@@ -3532,9 +3532,9 @@
 <tr>
 	<th rowspan="2"><a class="ui water_bucket" title="水桶"></a></th>
 	<td><a class="ui black_stained_glass" title="染色玻璃"></a></td>
-	<td><a class="ui purple_terracotta" title="染色陶瓦"></a></td>
-	<td><a class="ui green_wool" title="彩色羊毛"></a></td>
-	<td><a class="ui green_bed" title="彩色床"></a></td>
+	<td><a class="ui black_stained_glass_pane" title="染色玻璃板"></a></td>
+	<td><a class="ui purple_terracotta" title="彩色陶瓦"></a></td>
+	<td><a class="ui green_candles" title="彩色蜡烛"></a></td>
 	<td><a class="ui sponge" title="海绵"></a></td>
 	<td colspan="2"><a class="ui lava_bucket" title="熔岩桶"></a></td>
 	<td><a class="ui sticky_piston" title="黏性活塞"></a></td>
@@ -3551,10 +3551,11 @@
 	<td></td>
 	<td></td>
 </tr>
-<tr><td><a class="ui glass" title="玻璃"></a></td>
+<tr>
+	<td><a class="ui glass" title="玻璃"></a></td>
+	<td><a class="ui glass_pane" title="玻璃板"></a></td>
 	<td><a class="ui terracotta" title="陶瓦"></a></td>
-	<td><a class="ui white_wool" title="白色羊毛"></a></td>
-	<td><a class="ui white_bed" title="白色床"></a></td>
+	<td><a class="ui candles" title="蜡烛"></a></td>
 	<td><a class="ui wet_sponge" title="湿海绵"></a></td>
 	<td colspan="2"><a class="ui obsidian" title="黑曜石"></a>
 		<a class="ui bucket" title="桶"></a></td>
@@ -5175,7 +5176,7 @@
 		<a class="empty"></a>
 		<a class="empty"></a>
 		<a class="empty"></a>
-		<a class="quartz" title="石英"><span class="stack">4</span></a>
+		<a class="quartz" title="下界石英"><span class="stack">4</span></a>
 	</span></td>
 	<td></td>
 </tr>
@@ -5552,7 +5553,7 @@
 	<td><span class="ui aiom" title="多功能一体机">
 		<a class="ci normal_case" title="常温"></a>
 		<a class="ci high_pressure" title="高压"></a>
-		<a class="quartz" title="石英"></a>
+		<a class="quartz" title="下界石英"></a>
 		<a class="flint" title="燧石"></a>
 		<a href="#石英粉" class="ci quartz_dust" title="石英粉"></a>
 		<a class="empty"></a>
@@ -5909,13 +5910,13 @@
 <tr><td>红色染料+石英+<a href="#火焰之星">火焰之星</a></td>
 	<td><span class="ui cm" title="合成器">
 		<a class="red_dye" title="红色染料"></a>
-		<a class="quartz" title="石英"></a>
+		<a class="quartz" title="下界石英"></a>
 		<a class="red_dye" title="红色染料"></a>
-		<a class="quartz" title="石英"></a>
+		<a class="quartz" title="下界石英"></a>
 		<a class="ci nova_of_fire" title="火焰之星"></a>
-		<a class="quartz" title="石英"></a>
+		<a class="quartz" title="下界石英"></a>
 		<a class="red_dye" title="红色染料"></a>
-		<a class="quartz" title="石英"></a>
+		<a class="quartz" title="下界石英"></a>
 		<a class="red_dye" title="红色染料"></a>
 		<a class="ci red_force_of_fire" title="红色火之力"></a>
 	</span></td>
@@ -9051,7 +9052,7 @@
 <li>魔杖等级：至少2级</li>
 <li>附加物：紫水晶块</li>
 <li>时长：60秒</li>
-<li>消耗材料：紫水晶碎片+<a href="#天空之翼">稀有掉落物</a></li>
+<li>消耗材料：紫水晶碎片+<a href="#水晶之星">水晶之星</a></li>
 <li>消耗施法者生命：5点</li>
 </ul>
 <p><span class="ui dp">
@@ -9059,7 +9060,7 @@
 	<a class="amethyst_shard" title="紫水晶碎片"></a>
 	<a class="amethyst_shard" title="紫水晶碎片"></a>
 	<a class="amethyst_shard" title="紫水晶碎片"></a>
-	<a href="#天空之翼" class="ci wing_of_sky" title="稀有掉落物"></a>
+	<a href="#水晶之星" class="ci heart_of_crystal" title="水晶之星"></a>
 	<a class="amethyst_shard" title="紫水晶碎片"></a>
 	<a class="amethyst_shard" title="紫水晶碎片"></a>
 	<a class="amethyst_shard" title="紫水晶碎片"></a>
@@ -9529,12 +9530,12 @@
 	<th><strong>护士帽</strong></th>
 	<td>石英</td>
 	<td><span class="ui cm" title="合成器">
-		<a class="quartz" title="石英"></a>
-		<a class="quartz" title="石英"></a>
-		<a class="quartz" title="石英"></a>
-		<a class="quartz" title="石英"></a>
+		<a class="quartz" title="下界石英"></a>
+		<a class="quartz" title="下界石英"></a>
+		<a class="quartz" title="下界石英"></a>
+		<a class="quartz" title="下界石英"></a>
 		<a class="empty"></a>
-		<a class="quartz" title="石英"></a>
+		<a class="quartz" title="下界石英"></a>
 		<a class="empty"></a>
 		<a class="empty"></a>
 		<a class="empty"></a>
@@ -10171,7 +10172,7 @@
 	<td><a class="ui ci sakura_sapling" title="樱花树树苗"></a></td>
 	<td><a class="ui bamboo" title="竹子"></a></td>
 	
-	<td><a class="ui quartz" title="石英"></a></td>
+	<td><a class="ui quartz" title="下界石英"></a></td>
 	<td><a class="ui clay_ball" title="黏土球"></a></td>
 	<td><a class="ui nether_wart" title="下界疣"></a></td>
 	<td><a class="ui blaze_powder" title="烈焰粉"></a></td>
@@ -10222,7 +10223,7 @@
 	<td><a class="ui coal" title="煤炭"></a></td>
 	<td><a class="ui iron_nugget" title="铁粒"></a></td>
 	<td><a class="ui gold_nugget" title="金粒"></a></td>
-	<td><a class="ui quartz" title="石英"></a></td>	
+	<td><a class="ui quartz" title="下界石英"></a></td>	
 	<td><a class="ui lapis_lazuli" title="青金石"></a></td>
 	<td><a class="ui emerald" title="绿宝石"></a></td>
 	<td><a class="ui diamond" title="钻石"></a></td>
