--- a/test.html
+++ b/test.html
@@ -35,7 +35,7 @@
 
 
 <table style="border:1px solid #aaa;border-collapse:collapse;" align="left">
-	<thead style="border:1px solid #aaa;border-collapse:collapse;">
+	<thead style="border:1px solid rgb(143, 134, 134);border-collapse:collapse;">
 		<tr><th style="text-align: center;background-color: #505050;color:white;border:1px solid #aaa;border-collapse:collapse;width:20%;">物品</th><th style="text-align: center;background-color: #505050;color:white;border:1px solid #aaa;border-collapse:collapse;width:20%;">堆叠数</th><th style="text-align: center;background-color: #505050;color:white;border:1px solid #aaa;border-collapse:collapse;width:20%;">权重</th><th style="text-align: center;background-color: #505050;color:white;border:1px solid #aaa;border-collapse:collapse;width:20%;">品质</th></tr>
 	</thead>
 	<tbody style="border:1px solid #aaa;border-collapse:collapse;">
